[package]
name = "traktor-obs-relay"
version = "0.1.0"
authors = ["akasaka <akasaka@somewhere>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rouille = "3.0.0"
serde = "1.0.124"
serde_derive = "1.0.124"
log = "0.4.11"
simple_logger = "1.11.0"
config = "0.10.1"
lazy_static = "1.4.0"
chrono = "0.4.19"
